added values for RKstar

--- a/FlavBit/data/flav_data.yaml
+++ b/FlavBit/data/flav_data.yaml
@@ -1558,3 +1558,29 @@
     value: -0.15
   - name: S8_B0Kstar0mumu_17-19
     value: -0.11
+
+- name: RKstar_0045_11
+  islimit: false
+  exp_value: 0.66
+  exp_stat_error: 0.09
+  exp_sys_error: 0.03
+  exp_source: 1705.05802
+  th_error: 0.01
+  th_error_type: A
+  th_error_source: GinoPAPER
+  correlation:
+  - name: NONE
+
+- name: RKstar_11_60
+  islimit: false
+  exp_value: 0.69
+  exp_stat_error: 0.09
+  exp_sys_error: 0.05
+  exp_source: 1705.05802
+  th_error: 0.01
+  th_error_type: A
+  th_error_source: GinoPAPER
+  correlation:
+  - name: NONE
+
+
