--- a/FlavBit/data/flav_data.yaml
+++ b/FlavBit/data/flav_data.yaml
@@ -1584,3 +1584,17 @@
   - name: NONE
 
 
+- name: RK
+  islimit: false
+  exp_value: 0.745
+  exp_stat_error: 0.082
+  exp_sys_error: 0.036
+  exp_source: 1406.6482
+  th_error: 0.01
+  th_error_type: A
+  th_error_source: GinoPAPER
+  correlation:
+  - name: NONE
+
+
+
