--- a/SingletDMZ3.yaml
+++ b/SingletDMZ3.yaml
@@ -202,7 +202,7 @@ KeyValues:
   likelihood:
     model_invalid_for_lnlike_below: -1e4
 
-  debug: true
+  debug: false
 
   # Set the output path for the log files (relative to working directory unless absolute path is specified)
   default_output_path: "runs/SingletDM-DarkBit/"
