--- a/SingletDM.yaml
+++ b/SingletDM.yaml
@@ -1,5 +1,15 @@
 Parameters:
 
+  # Nuclear matrix parameters.
+  nuclear_params_sigmas_sigmal:
+    sigmas:
+      range: [19, 67]
+    sigmal:
+      range: [31, 85]
+    deltau:  0.842
+    deltad:  -0.427
+    deltas:  -0.085
+
   #SM parameters.
   StandardModel_SLHA2:
     mT: 173.15
@@ -44,10 +54,21 @@ Parameters:
       range: [45., 10000.]
       prior_type: log
     lambda_hS:
-      range: [0.0001,2]
+      range: [0.0001, 10.00]
       prior_type: log
     lambda_S: 0
 
+  Halo_gNFW_rho0:
+    rho0:
+      range: [0.2, 0.8]
+    v0: 235.0
+    vesc: 550.0
+    vrot: 235.0
+    rs: 20.0
+    r_sun: 8.5
+    alpha: 1
+    beta: 3
+    gamma: 1
 
 Printer:
   printer: hdf5
@@ -85,8 +106,8 @@ ObsLikes:
     - capability: VS_likelihood
       purpose: LogLike
 
-    - capability: check_perturb_min_lambda
-      purpose: LogLike
+    #- capability: check_perturb_min_lambda
+    #  purpose: LogLike
 
     # Dark matter likelihoods
     - capability: lnL_oh2
@@ -116,6 +137,13 @@ ObsLikes:
     - capability: IC79_loglike
       purpose:    LogLike
 
+    # SI nuclear nuisance parameter likelihood
+    - capability: lnL_SI_nuclear_parameters
+      purpose:    LogLike
+
+    # SM nuisance parameter likelihoods
+    - capability: lnL_t_mass
+      purpose:    LogLike
 
     # Observables
     - capability: find_non_perturb_scale
@@ -129,21 +157,23 @@ ObsLikes:
     - capability: expected_lifetime
       purpose: Observable
 
+    - capability: lnL_alpha_s
+      purpose:    LogLike
+
+    # Other observables
     - purpose:    Observable
       capability: RD_oh2
 
 
 Rules:
+  
+  # Choose to rescale signals in direct and indirect detection by the relic density fraction
+  - capability: RD_fraction
+    function: RD_fraction_leq_one       
        
   - capability: vacuum_stability
     function: find_min_lambda_SingletDM
     module: SpecBit
-
-
-  - function: TH_Process_Catalog_SingletDM
-    options:
-       ProcessCatalog_MinBranching: 0 # Minimum branching fraction of included processes
-  
 
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
@@ -169,7 +199,7 @@ Rules:
   - capability: SingletDM_spectrum_pole
     function: get_SingletDM_spectrum
     options:
-      check_perturb: true
+      check_perturb: false
       check_perturb_pts: 10
 
   - capability: RD_oh2_Xf_MicrOmegas
@@ -234,3 +264,4 @@ KeyValues:
 
   # Set the output path for the log files (relative to working directory unless absolute path is specified)
   default_output_path: "runs/SingletDM-DarkBit/"
+  #default_output_path: "/home/mmm0290/Scratch/gambit/SingletDM"
