Added clear() methods for two analyses. Updated CMSSM.yaml to work with the latest ColliderBit updates.
	modified:   ColliderBit/src/analyses/Analysis_CMS_13TeV_1LEPStop_36invfb.cpp
	modified:   ColliderBit/src/analyses/Analysis_CMS_13TeV_MONOJET_36invfb.cpp
	modified:   yaml_files/CMSSM.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -255,6 +255,9 @@ ObsLikes:
       capability: LHC_signals
 
     - purpose:    Observable
+      capability: LHCEventLoopInfo
+
+    - purpose:    Observable
       capability: RD_oh2
 
     - purpose:    Observable
@@ -501,42 +504,71 @@ Rules:
     type: "ColliderBit::BuckFastSmearATLAS"
     function: getBuckFastATLAS
     options:
-      partonOnly: [false]
-      antiktR: [0.4]
-      useDetector: [true]
+      partonOnly: [false,false]
+      antiktR: [0.4,0.4]
+      useDetector: [true,true]
 
   # CMS detector simulation
   - capability: SimpleSmearingSim
     type: "ColliderBit::BuckFastSmearCMS"
     function: getBuckFastCMS
     options:
-      partonOnly: [false]
-      antiktR: [0.5]
-      useDetector: [true]
+      partonOnly: [false,false]
+      antiktR: [0.5,0.4]
+      useDetector: [true,true]
 
   # ATLAS analysis setup.
   - capability: ATLASAnalysisContainer
     function: getATLASAnalysisContainer
     options:
-      analyses: [ ["ATLAS_8TeV_0LEP_20invfb","ATLAS_8TeV_0LEPStop_20invfb",
-                   "ATLAS_8TeV_1LEPStop_20invfb","ATLAS_8TeV_2bStop_20invfb",
-                   "ATLAS_8TeV_2LEPEW_20invfb","ATLAS_8TeV_2LEPStop_20invfb",
-                   "ATLAS_8TeV_3LEPEW_20invfb"] ]
+      analyses: [ ["ATLAS_8TeV_0LEP_20invfb",
+                   "ATLAS_8TeV_0LEPStop_20invfb",
+                   "ATLAS_8TeV_1LEPbb_20invfb",
+                   "ATLAS_8TeV_1LEPStop_20invfb",
+                   "ATLAS_8TeV_2bStop_20invfb",
+                   "ATLAS_8TeV_2LEPEW_20invfb",
+                   "ATLAS_8TeV_2LEPStop_20invfb",
+                   "ATLAS_8TeV_3LEPEW_20invfb"],
+                  ["ATLAS_13TeV_0LEP_13invfb",
+                   "ATLAS_13TeV_0LEPStop_20invfb",
+                   "ATLAS_13TeV_1LEPStop_36invfb",
+                   "ATLAS_13TeV_2LEPStop_36invfb",
+                   "ATLAS_13TeV_MultiLEP_36invfb",
+                   "ATLAS_13TeV_RJ3L_lowmass_36invfb"] ]
 
   # CMS analysis setup
   - capability: CMSAnalysisContainer
     function: getCMSAnalysisContainer
     options:
-      analyses: [ ["CMS_8TeV_1LEPDMTOP_20invfb","CMS_8TeV_2LEPDMTOP_20invfb",
-                   "CMS_8TeV_3LEPEW_20invfb","CMS_8TeV_MONOJET_20invfb"] ]
+      analyses: [ ["CMS_8TeV_1LEPDMTOP_20invfb",
+                   "CMS_8TeV_2LEPDMTOP_20invfb",
+                   "CMS_8TeV_3LEPEW_20invfb",
+                   "CMS_8TeV_MONOJET_20invfb"],
+                  ["CMS_13TeV_0LEP_13invfb",
+                   "CMS_13TeV_1LEPbb_36invfb",
+                   "CMS_13TeV_1LEPStop_36invfb",
+                   "CMS_13TeV_2LEPsoft_36invfb",
+                   "CMS_13TeV_2LEPStop_36invfb",
+                   "CMS_13TeV_2OSLEP_36invfb",
+                   "CMS_13TeV_MONOJET_36invfb",
+                   "CMS_13TeV_MultiLEP_36invfb"] ]
 
-  # Choose Monte Carlo event simulator and number of events to run.
+  # Choose Monte Carlo event simulator.
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      nEvents: [20000]
-      pythiaNames: ["Pythia_SUSY_LHC_8TeV"]
+      pythiaNames: ["Pythia_SUSY_LHC_8TeV", "Pythia_SUSY_LHC_13TeV"]
       silenceLoop: true
+
+  # Choose statistical settings for Monte Carlo event generator
+  - capability: MC_ConvergenceSettings
+    options:
+      min_nEvents: [5000,5000]
+      max_nEvents: [50000,50000]
+      events_between_convergence_checks: [5000,5000]
+      target_fractional_uncert: [0.3,0.3]
+      halt_when_systematic_dominated: true
+      all_SR_must_converge: false
 
   # Define Monte Carlo event simulator and associated options.
   - capability:  HardScatteringSim
@@ -553,8 +585,16 @@ Rules:
                              "SUSY:all = on",
                              "TauDecays:mode = 0",
                              "TimeShower:pTmin = 20"]
-      xsec_vetos: [0.048]  # 0.048 fb correspond to ~1 expected event at L = 20.7 fb^-1.
+      Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
+                             "PartonLevel:MPI = off",
+                             "PartonLevel:ISR = on",
+                             "PartonLevel:FSR = on",
+                             "HadronLevel:all = on",
+                             "SUSY:all = on",
+                             "TauDecays:mode = 0",
+                             "TimeShower:pTmin = 20"]
 
+      xsec_vetos: [0.048,0.075]  # 0.048 fb correspond to ~1 expected event at L = 20.7 fb^-1.
 
 Logger:
 
