--- a/yaml_files/SN_dev.yaml
+++ b/yaml_files/SN_dev.yaml
@@ -27,7 +27,8 @@ Parameters:
     # CKM
     # Wolfenstein parameterisation (matches SLHA2 VCKMIN block)
     # from http://pdg.lbl.gov/2014/reviews/rpp2014-rev-ckm-matrix.pdf
-    CKM_lambda  :  0.22537
+#    CKM_lambda  :  0.22537
+    CKM_lambda: [0.2151, 0.2275] 
     CKM_A       :  0.814
     CKM_rhobar  :  0.117
     CKM_etabar  :  0.353
@@ -116,7 +117,7 @@ Scanner:
     de:
       plugin: diver
       like: LogLike
-      NP: 10000
+      NP: 100
 
     multinest:
       plugin: multinest
@@ -125,65 +126,103 @@ Scanner:
 
 ObsLikes:
 
-# - capability: lnLbbn
-#    purpose: LogLike
-#    function: lnL_bbn
+  # EWPO constraints
 
-#  - capability: lnLlepuniv
-#    purpose: LogLike
-#    function: lnL_lepuniv
+  - capability: lnL_Gmu
+    purpose: LogLike
+    function: lnL_Gmu_chi2
 
-#  - capability: lnL0nubb
-#    purpose: LogLike
-#    function: lnL_0nubb
+  - capability: lnL_W_mass
+    purpose: LogLike
+    function: lnL_W_mass_chi2
 
-#  - capability: lnLckm
-#    purpose: LogLike
-#    function: lnL_ckm
+  - capability: lnL_sinW2_eff
+    purpose: LogLike
+    function: lnL_sinW2_eff_chi2
 
-#  - capability: lnLpienu
-#    purpose: LogLike
-#    function: lnL_pienu
+  # Indirecte searches
 
-#  - capability: lnLps191e
-#    purpose: LogLike
-#    function: lnL_ps191_e
+  - capability: lnLbbn
+    purpose: LogLike
+    function: lnL_bbn
 
-#  - capability: lnLps191mu
-#    purpose: LogLike
-#    function: lnL_ps191_mu
+  - capability: lnLlepuniv
+    purpose: LogLike
+    function: lnL_lepuniv
 
-#  - capability: lnLcharme
-#    purpose: LogLike
-#    function: lnL_charm_e
+  - capability: lnL0nubb
+    purpose: LogLike
+    function: lnL_0nubb
 
-#  - capability: lnLcharmmu
-#    purpose: LogLike
-#    function: lnL_charm_mu
+  - capability: lnLckm
+    purpose: LogLike
+    function: lnL_ckm
 
-#  - capability: lnLdelphi
-#    purpose: LogLike
-#    function: lnL_delphi
+  - capability: l2lgamma_lnL
+    purpose: LogLike
+    function: l2lgamma_likelihood
 
-#  - capability: lnLatlase
-#    purpose: LogLike
-#    function: lnL_atlas_e
+  - capability: l2lll_lnL
+    purpose: LogLike
+    function: l2lll_likelihood
 
-#  - capability: lnLatlasmu
-#    purpose: LogLike
-#    function: lnL_atlas_mu
+  - capability: mu2e_lnL
+    purpose: LogLike
+    function: mu2e_likelihood
 
-#  - capability: lnLe949
-#    purpose: LogLike
-#    function: lnL_e949
+  # Direct searches
 
-#  - capability: lnLnutev
-#    purpose: LogLike
-#    function: lnL_nutev
+  - capability: lnLpienu
+    purpose: LogLike
+    function: lnL_pienu
 
-#  - capability: lnLtau
-#    purpose: LogLike
-#    function: lnL_tau
+  - capability: lnLps191e
+    purpose: LogLike
+    function: lnL_ps191_e
+
+  - capability: lnLps191mu
+    purpose: LogLike
+    function: lnL_ps191_mu
+
+  - capability: lnLcharme
+    purpose: LogLike
+    function: lnL_charm_e
+
+  - capability: lnLcharmmu
+    purpose: LogLike
+    function: lnL_charm_mu
+
+  - capability: lnLdelphi
+    purpose: LogLike
+    function: lnL_delphi
+
+  - capability: lnLatlase
+    purpose: LogLike
+    function: lnL_atlas_e
+
+  - capability: lnLatlasmu
+    purpose: LogLike
+    function: lnL_atlas_mu
+
+  - capability: lnLe949
+    purpose: LogLike
+    function: lnL_e949
+
+  - capability: lnLnutev
+    purpose: LogLike
+    function: lnL_nutev
+
+  - capability: lnLtau
+    purpose: LogLike
+    function: lnL_tau
+
+  # Theoretical constraints
+
+  - capability: perturbativity_lnL
+    purpose: LogLike
+    function: perturbativity_likelihood
+
+  # Observables
 
   - capability: Ue1
     purpose: Observable
@@ -220,72 +259,6 @@ ObsLikes:
   - capability: Ut3
     purpose: Observable
     function: Ut3
-
-#  - capability: l2lgamma_lnL
-#    purpose: LogLike
-#    function: l2lgamma_likelihood
-
-#  - capability: l2lll_lnL
-#    purpose: LogLike
-#    function: l2lll_likelihood
-
-#  - capability: mu2e_lnL
-#    purpose: LogLike
-#    function: mu2e_likelihood
-
-  - capability: muegamma
-    purpose: Observable
-    function: SN_muegamma
-
-  - capability: tauegamma
-    purpose: Observable
-    function: SN_tauegamma
-
-  - capability: taumugamma
-    purpose: Observable
-    function: SN_taumugamma
-
-  - capability: mueee
-    purpose: Observable
-    function: SN_mueee
-
-  - capability: taueee
-    purpose: Observable
-    function: SN_taueee
-
-  - capability: taumumumu
-    purpose: Observable
-    function: SN_taumumumu
-
-  - capability: taumuee
-    purpose: Observable
-    function: SN_taumuee
-
-  - capability: taueemu
-    purpose: Observable
-    function: SN_taueemu
-
-  - capability: tauemumu
-    purpose: Observable
-    function: SN_tauemumu
-
-  - capability: taumumue
-    purpose: Observable
-    function: SN_taumumue
-
-  - capability: mueTi
-    purpose: Observable
-    function: SN_mueTi
-
-  - capability: muePb
-    purpose: Observable
-    function: SN_muePb
-
-  - capability: perturbativity_lnL
-    purpose: LogLike
-    function: perturbativity_likelihood
-
-   
 
 Rules:
 
